<resources>
    <string name="app_name">Fit Garage</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="title_tip_1">Burn More Calories</string>
    <string name="subtitle_1_tip_1">1. Lift Weights</string>
    <string name="body_1_tip_1">The human body naturally burns more calories to maintain one pound of muscle than one
        pound of fat. Therefore, the more muscle you build, the higher is your resting energy spending, and the more
        calories your body will burn at rest.</string>
    <string name="subtitle_2_tip_1">2. Metabolism</string>
    <string name="body_2_tip_1">The faster your metabolism, the more calories you burn. While metabolism is heavily
        influenced by genetics, certain changes, such as weightlifting and resistance training, can boost your metabolism
        and promote fat loss.</string>
    <string name="subtitle_3_tip_1">3. Diet</string>
    <string name="body_3_tip_1">Did you know digestion burns calories? And protein burns the most calories. Good protein
        sources include lean meats like chicken and fish, as well as dairy, whole grains, beans, lentils, and nuts. Include
        protein portions with every meal.</string>
    <string name="subtitle_4_tip_1">4. HIIT</string>
    <string name="body_4_tip_1">High Intensity Interval Training (HIIT) can help you burn more fat and calories by increasing
        your metabolism, even after your workout is over. Incorporate HIIT into your workout routine.</string>
    <string name="subtitle_5_tip_1">5. Sleep</string>
    <string name="body_5_tip_1">Lack of sleep can decrease the number of calories you burn, and is linked to a major increase
        in the risk of obesity. Try to have 8 hours of sleep every night.</string>
    <string name="title_tip_2">Small Food Tips That Go a Long Way</string>
    <string name="subtitle_1_tip_2">1. Whole Foods</string>
    <string name="body_1_tip_2">Fat-free foods are usually high in sugar and contain “empty calories”. Instead, opt for fruits,
        vegetables, quality protein, and other whole foods.</string>
    <string name="subtitle_2_tip_2">2. Have Snacks, In Moderation</string>
    <string name="body_2_tip_2">Removing sodas, fast foods, candy, and highly processed confectioneries is a good way to improve
        health. However, you don\'t have to completely remove such snacks. These foods can be eaten in addition and moderation to
        your healthy diet, but should not be the primary source of your caloric intake.</string>
    <string name="subtitle_3_tip_2">3. Eat Fulfillingly</string>
    <string name="body_3_tip_2">When hungry, your aim should be to eat nutritious and filling foods, not to eat as little calories
        as possible. Choose protein and fiber-rich foods, as these foods fill you up and nourish your body. Protein also assists in
        muscle development and maintenance.</string>
    <string name="subtitle_4_tip_2">4. Hydrate</string>
    <string name="body_4_tip_2">Often, we mistake dehydration for hunger. Staying hydrated is an important part of eating healthy.
        Water is the best way to hydrate yourself. Buy a reusable bottle and carry it around to remember to hydrate.</string>
    <string name="subtitle_5_tip_2">5. Aim For Progress, Not Perfection</string>
    <string name="body_5_tip_2">Start small. A big change can be overwhelming and discouraging. Instead, if you eat takeout food
        frequently, try cooking one meal at home. Aim for eating fruits instead of sugary drinks. Create a list of simple healthy
        alternatives to assist.</string>
    <string name="subtitle_6_tip_2">6. Balance</string>
    <string name="body_6_tip_2">A balanced diet provides nutrients your body needs to work effectively. Without proper nutrition,
        your body is more prone to fatigue, disease, infection, and overall low performance. A balanced diet will combine various
        foods from fruits, vegetables, whole grain, protein and dairy.</string>
    <string name="subtitle_7_tip_2">7. One Diet Does Not Fit All</string>
    <string name="body_7_tip_2">Everyone is unique, and our differences in genetics, body types and lifestyle determine which diet
        is fit and sustainable. Experiment with different healthy meal plans to determine which you find enjoyable and can keep up
        with in the long run.</string>
    <string name="title_tip_3">Less Work, More Output</string>
    <string name="subtitle_1_tip_3">1. Decrease Cardio</string>
    <string name="body_1_tip_3">Too much cardio can actually prevent fat loss because your body will start burning muscle for fuel.
        Instead, opt for resistance training, which builds muscle, to increase your metabolic rate.</string>
    <string name="subtitle_2_tip_3">2. Sleep More</string>
    <string name="body_2_tip_3">When you get less sleep, your system produces more cortisol, a hormone that can cause weight gain
        when it’s out of normal range. Aim for at least 8 hours of sleep every day. Sleeping also aids in recovery, and assists in
        building more lean muscle which will help you burn more calories at rest.</string>
    <string name="subtitle_3_tip_3">3. Eat Protein and Fiber-Rich Foods</string>
    <string name="body_3_tip_3">These foods help you feel full, thus may also help with weight loss. Protein also assists in muscle
        development and maintenance.</string>
    <string name="subtitle_4_tip_3">4. Get Faster Results With Shorter Workouts</string>
    <string name="body_4_tip_3">High-intensity interval training (HIIT) has more cardiovascular and fat-loss benefits than any other
        workout. It involves short bursts of maximum effort followed by a small resting period for some number of rounds. HIIT workouts
        can range from 5 minutes to 15. Incorporate HIIT into your workout routine.</string>
    <string name="subtitle_5_tip_3">5. Workout In Variety</string>
    <string name="body_5_tip_3">Performing multiple variations of an exercise can increase muscles engaged and the amount of weight you
        can lift, leading to greater gains and results than repeating same exercises month after month.</string>
    <string name="title_tip_4">Why You Should Start Working Out Today</string>
    <string name="subtitle_1_tip_4">1. Improved Mood</string>
    <string name="body_1_tip_4">Exercise can improve your mood and decrease feelings of depression, anxiety, and stress. It also benefits
        your mood regardless of the intensity of your workout.</string>
    <string name="subtitle_2_tip_4">2. Lose Weight</string>
    <string name="body_2_tip_4">Regular exercise increases your metabolic rate, which can burn more calories and help you lose weight.
        Additionally, combining cardio with resistance training can maximize fat loss and muscle mass maintenance, which is essential for
        keeping the weight off and maintaining lean muscle mass.</string>
    <string name="subtitle_3_tip_4">3. Reduce Risk of Chronic Diseases</string>
    <string name="body_3_tip_4">Regular exercise, combined with a healthy diet, can help prevent and manage Type 2 Diabetes, heart disease,
        many types of cancer, high cholesterol and hypertension.</string>
    <string name="subtitle_4_tip_4">4. Improve Brain Health and Memory</string>
    <string name="body_4_tip_4">Exercise increases your heart rate, which promotes blood flow and oxygen to your brain. It can also assist
        the growth of brain cells, increase cognitive performance, and prevent conditions like Alzheimer’s disease and dementia.</string>
    <string name="subtitle_5_tip_4">5. Improve Relaxation and Sleep</string>
    <string name="body_5_tip_4">Regular physical activity, regardless of whether it is cardio or a combination of cardio and resistance
        training, can help you sleep better and feel more energized during the day.</string>
    <string name="title_tip_5">Things That Stop You From Seeing Results</string>
    <string name="subtitle_1_tip_5">1. Excessive Cardio</string>
    <string name="body_1_tip_5">Too much cardio can prevent fat loss since your body will burn muscles for fuel. A better alternative is
        to incorporate strength training, which builds muscle mass and increases metabolism, alongside HIIT, which tones the body, for better
        results.</string>
    <string name="subtitle_2_tip_5">2. Repetitive Exercise</string>
    <string name="body_2_tip_5">If you do the same exercise frequently, your body adapts and the workout is not effective anymore. Whereas
        with varied functional movements, your body will need to work harder to keep up. Vary your routine by changing intensity, weights,
        duration or working on entirely new muscle groups or trying new activities.</string>
    <string name="subtitle_3_tip_5">3. Not Warming Up</string>
    <string name="body_3_tip_5">Warm-ups activate and prepare your muscles for workouts by getting your heart pumping more blood into them,
        which improves your workout performance.</string>
    <string name="subtitle_4_tip_5">4. Lack of Recovery</string>
    <string name="body_4_tip_5">Depending on your level of fitness and intensity of your workout, the time required to recover will vary.
        A good routine would be three days of training, four days of rest for beginners and up to five days of training for people with higher
        levels of fitness.</string>
    <string name="subtitle_5_tip_5">5. Improper Diet</string>
    <string name="body_5_tip_5">Because our bodies are unique, there is no all-inclusive nutrition advice. However, a great start is to eat
        “mindfully” and to opt for nutrient-dense unprocessed whole foods, high-quality proteins and essential fats, whenever possible.</string>
    <string name="label_monday">Monday</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_guide_to_fit_garage">Guide to Fit Garage</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_acknowledgements">Acknowledgements</string>
    <string name="body_1_acknowledgements">First and foremost, we would like to thank our supervisor, Dr.Tan, for without him our group would
        not be able to create Fit Garage. His assistance includes helping us have a clear view of what we’re doing, as well as providing useful
        feedback and constructive criticism which helped us make a better product.</string>
    <string name="body_2_acknowledgements">Furthermore, we would like to thank Pexels, Flabfix, Gfycat, Makeagif, PrecisionNutrition, and Giphy
        for providing us with the open-source workout videos. These are high-quality videos and they teach new users how to do specific exercises
        with good form to avoid injuries. Without these open-source websites, we would not be able to make an app that is suitable for beginners as
        some of the exercises we encourage our users to perform requires a good form.</string>
    <string name="body_3_acknowledgements">Moreover, we’d like to express our gratitude towards the fitness youtubers that informed us of the best
        routines for each level of workout. Fitness youtubers such as Pamela Reif, Women’s Health UK, and ThenX helped create a similar routine for
        our Glutes &amp; Legs workout. Youtubers Jordan Yeoh Fitness, BullyJuice, and NEXT workout inspired us for the Shoulders &amp; Arm workout
        routines. Keep Trainer inspired our Back &amp; Chest workout routine while Naomi Kong, Daniela Suarez, and Heather Robertson inspired our Abs
        &amp; Core workout routines.</string>
    <string name="body_4_acknowledgements">Lastly, we\'d like to thank Healthline for providing the tips for Fit Garage’s Tips page where some small
        tips that will help beginners in the long run are given.</string>
</resources>