<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tip4Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_base"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@color/white" />

        <View
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@color/pink_base" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tip_4_title"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/title_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="30sp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tip_4_subtitle_1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/subtitle_1_tip_4"
                android:textColor="@color/pink_base"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_title" />

            <TextView
                android:id="@+id/tv_tip_4_body_1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/body_1_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_subtitle_1" />

            <ImageView
                android:id="@+id/iv_tip_4_img_1"
                android:layout_width="320dp"
                android:layout_height="135dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_body_1"
                android:background="@drawable/iv_tip_4_img_1"/>

            <TextView
                android:id="@+id/tv_tip_4_subtitle_2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/subtitle_2_tip_4"
                android:textColor="@color/pink_base"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_tip_4_img_1" />

            <TextView
                android:id="@+id/tv_tip_4_body_2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/body_2_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_subtitle_2" />

            <TextView
                android:id="@+id/tv_tip_4_subtitle_3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/subtitle_3_tip_4"
                android:textColor="@color/pink_base"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_body_2" />

            <TextView
                android:id="@+id/tv_tip_4_body_3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/body_3_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_subtitle_3" />

            <ImageView
                android:id="@+id/iv_tip_4_img_2"
                android:layout_width="320dp"
                android:layout_height="135dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_body_3"
                android:background="@drawable/iv_tip_4_img_2"/>

            <TextView
                android:id="@+id/tv_tip_4_subtitle_4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/subtitle_4_tip_4"
                android:textColor="@color/pink_base"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_tip_4_img_2" />

            <TextView
                android:id="@+id/tv_tip_4_body_4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/body_4_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_subtitle_4" />

            <TextView
                android:id="@+id/tv_tip_4_subtitle_5"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/subtitle_5_tip_4"
                android:textColor="@color/pink_base"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_body_4" />

            <TextView
                android:id="@+id/tv_tip_4_body_5"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/body_5_tip_4"
                android:textColor="@color/purple_base"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_subtitle_5" />

            <ImageView
                android:id="@+id/iv_tip_4_img_3"
                android:layout_width="320dp"
                android:layout_height="135dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tip_4_body_5"
                android:background="@drawable/iv_tip_1_img_3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="25dp"
                android:background="@color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_tip_4_img_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>